--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^1.17.5"
+  },
+  "dependencies": {
+    "ws": "^5.2.0"
   }
 }
